# hft-server

./: .gitignore  Cargo.toml  README.md  diesel.toml  dump.rdb  hft_server.db
migrations/2024-07-18-161831_create_users/: up.sql
migrations/2024-07-18-165847_create_orders/: down.sql  up.sql
migrations/2024-07-18-165851_create_portfolios/: down.sql  up.sql
migrations/2024-07-18-165855_create_assets/: down.sql  up.sql
src/: events.rs  handlers.rs  main.rs  models.rs  schema.rs
tests/scripts/: test_limit_order.py  test_market_order.py  test_order_matching.py
