[package]
name = "hft_trading_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
web3 = "0.19.0"
env_logger = "0.9"
log = "0.4"
jsonwebtoken = "8.1"
bcrypt = "0.12"
uuid = { version = "1.0", features = ["v4"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
dotenv = "0.15"
r2d2 = "0.8.9"
chrono = { version = "0.4", features = ["serde"] }