[package]
name = "hft_trading_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
bcrypt = "0.12"
chrono = { version = "0.4", features = ["serde"] }
diesel = { version = "1.4.7", features = ["postgres", "r2d2"] }
dotenv = "0.15"
env_logger = "0.9"
ethabi = "18.0.0"
futures = "0.3.30"
hex = "0.4.3"
jsonwebtoken = "8.1"
log = "0.4"
r2d2 = "0.8.9"
redis = { version = "0.25.4", features = ["aio", "tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
web3 = { version = "0.19.0" }
